components/Button/Button.module.css
.button {
  position: relative;
  display: flex;
  align-items: center;
  padding: 5px 9px;
  color: var(--gray-f);
  background-color: var(--blue);
  border: none;
  border-radius: var(--radius);
  cursor: pointer;
}

.button:disabled {
  background-color: var(--gray-8);
}

@media (prefers-color-scheme: dark) {
  .button {
    color: var(--gray-2);
  }

  .button:disabled {
    background-color: var(--gray-7);
  }
}

